src/objects/Artifact__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields><fields>
        <fullName>External_Artifact_URL__c</fullName>
        <label>External Artifact URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Participation_Number__c</fullName>
        <label>Participation Number</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <referenceTo>Third_Party__c</referenceTo>
        <relationshipLabel>Artifacts</relationshipLabel>
        <relationshipName>Artifacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR and Non-HR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>isCurrent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Current Artifact</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Artifacts used to support Framework Certifications.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Artifact</label><nameField>
        <label>Artifact Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Artifacts</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><recordTypes>
        <fullName>Privacy_Policy</fullName>
        <active>true</active>
        <label>Privacy Policy</label>
    </recordTypes></CustomObject>